--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "python-50five"
+name = "fiftyfive"
 version = "0.0.1"
 description = "Python 3 package to retrieve EV charger data from 50five"
 dependencies = [
@@ -15,8 +15,8 @@ readme = "README.md"
 license = {text = "GPLv3+"}
 
 [project.urls]
-"Homepage" = "https://github.com/Crazy-Duck/python-50five"
-"Bug Tracker" = "https://github.com/Crazy-Duck/python-50five/issues"
+"Homepage" = "https://github.com/Crazy-Duck/fiftyfive"
+"Bug Tracker" = "https://github.com/Crazy-Duck/fiftyfive/issues"
 
 [build-system]
 requires = ["hatchling"]
